[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twitter-engine"
version = "0.1.0"
description = "OAuth2 CLI for Twitter posting and reply workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "tweepy",
  "requests-oauthlib",
  "python-dotenv",
  "requests>=2.32.0",
  "keyring",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
reply_engine = [
  "openai>=1.0.0",
  "tqdm>=4.66.0",
]

[project.scripts]
twitter-engine = "twitter_helper:main"
twitter-helper = "twitter_helper:main"
reply-engine = "reply_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["twitter_helper"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["reply_engine*"]
